// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders properly 1`] = `
<div>
  <div
    class="jsx-2566809609 buttonWrapper"
  >
    <div
      class="jsx-2566809609 buttonBackground alignCenter"
    >
      <a
        class="jsx-2566809609 button"
        href="https://www.google.com"
        rel="noreferrer"
        target="_blank"
      >
        Texto dentro do botão
      </a>
    </div>
  </div>
</div>
`;

exports[`<Button /> renders properly as a submit button 1`] = `
<div>
  <div
    class="jsx-2566809609 buttonWrapper"
  >
    <div
      class="jsx-2566809609 buttonBackground alignCenter"
    >
      <button
        class="jsx-2566809609 button"
        type="submit"
      >
        Texto dentro do botão
      </button>
    </div>
  </div>
</div>
`;

exports[`<Button /> renders properly when disabled, uppercased and aligned left 1`] = `
<div>
  <div
    class="jsx-2566809609 buttonWrapper"
  >
    <div
      class="jsx-2566809609 buttonBackground disabled"
    >
      <a
        class="jsx-2566809609 button uppercase"
        href="https://www.google.com"
        rel="noreferrer"
        target="_blank"
      >
        Texto dentro do botão
      </a>
    </div>
  </div>
</div>
`;

exports[`<Button /> renders properly without an external link 1`] = `
<div>
  <div
    class="jsx-2566809609 buttonWrapper"
  >
    <div
      class="jsx-2566809609 buttonBackground alignCenter"
    >
      <a
        class="jsx-2566809609 button"
        href="/pt/projects"
      >
        Texto dentro do botão
      </a>
    </div>
  </div>
</div>
`;
